--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,21 @@
     border-bottom: 1px solid var(--green);
 }
 
+/* New Case */
+.new_case_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+}
 
+.new_case {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
 
-
+.new_case .card {
+    padding: 3rem;
+    margin: 1rem;
+}
