--- a/src/components/CaseForm/CaseForm.css
+++ b/src/components/CaseForm/CaseForm.css
@@ -2,6 +2,10 @@
     padding: 2rem;
 }
 
+.new_case_form_container {
+    padding: 1rem;
+}
+
 .case_heading {
     position:relative;
     margin-bottom:2rem;
@@ -38,7 +42,51 @@
     margin-bottom: 2rem;
 }
 
+form h2, form h3, form h4 {
+    margin-bottom: 10px;
+}
+
+.form_group {
+    display:flex;
+    flex-direction: column;
+    margin: 1rem 0;
+}
+
 .form_group label {
     font-size:.8rem;
     font-weight:700;
+}
+
+.form_control {
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.col-2 {
+    display:grid;
+    gap: 1rem;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.col-3 {
+    display:grid;
+    gap: 1rem;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.col-3 > .form_group:last-child {
+    grid-column: span 2;
+}
+
+input, textarea {
+    font-family: 'Nunito', sans-serif;
 }
