--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,16 @@
     margin-right: 20px;
 }
 
-.home_avatar_image img {
+.member_avatar_image {
+    background-color:#dce7e7;
+    border-radius: 10px;
+    width: 43px;
+    height: 43px;
+    margin-right: 20px;
+}
+
+.home_avatar_image img,
+.member_avatar_image img {
     width:100%;
     height: 100%;
     border-radius: 10px;
@@ -79,6 +88,7 @@
 .content-table tbody tr:last-of-type {
     border-bottom: 1px solid var(--green);
 }
+
 
 /* New Case */
 .new_case_container {
