--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,8 @@ a:hover { cursor: pointer; }
   padding: .75rem 1.2rem;
   border: none;
   border-radius: 5px;
+  display: block;
+  text-align: center;
 }
 
 .btn:hover {
