--- a/src/App.css
+++ b/src/App.css
@@ -129,3 +129,15 @@
     padding: 3rem;
     margin: 1rem;
 }
+
+@media screen and (max-width: 500px) {
+    .home_pagecontent {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media screen and (max-width: 1080px) {
+    .home_pagecontent {
+        grid-template-columns: 1fr;
+    }
+}
